# tree-sitter-lua-pattern

./: Cargo.toml  README.md  dprint.json  grammar.js  package.json
queries/lua_pattern/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
