[package]
name = "tree-sitter-lua-pattern"
description = "lua-pattern grammar for the tree-sitter parsing library"
authors = ["RubixDev"]
version = "0.1.0"
keywords = ["incremental", "parsing", "lua-pattern"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/RubixDev/tree-sitter-lua-pattern"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
